Fix aggregates and spacing on text

--- a/src/scss/components/_options.scss
+++ b/src/scss/components/_options.scss
@@ -72,6 +72,12 @@
     gap: rem(24);
     background-color: $color-background-white;
     @extend %text-style-ui-2;
+
+    p {
+      &:not(:first-child) {
+        margin-top: -10px;
+      }
+    }
   }
 
   &__btn {
